--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+torch>=1.5,<2
 opencv-python>=4.2,<5
 matplotlib>=3.2.1,<4
 numpy>=1.18.4,<2
-
+imutils>=0.5.3,<1
+scipy>=1.4.1,<2
+scikit-image>=0.16.2,<1
